--- a/index.html
+++ b/index.html
@@ -1,93 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Multi-Audio Player</title>
+<title>Multi-Audio Player (Input Field)</title>
 <style>
 body {
     font-family: sans-serif;
-}
-.audio-container {
-    margin-bottom: 20px;
-}
-.audio-controls {
-    display: flex;
-    align-items: center;
-}
-.audio-name {
-    margin-right: 10px;
-}
-.volume-slider {
-    width: 100px;
 }
 </style>
 </head>
 <body>
 <h1>Multi-Audio Player</h1>
 
-<div class="audio-container">
-    <span class="audio-name">Audio 1:</span>
-    <input type="file" id="audio1" accept="audio/*">
-    <button id="play1">Play</button>
-    <button id="pause1">Pause</button>
-    <input type="range" min="0" max="1" step="0.01" class="volume-slider" id="volume1">
-</div>
+<div>
+    <label for="audioUrl">Enter Audio URL:</label><br>
+    <input type="text" id="audioUrl" placeholder="Paste audio URL here"><br><br>
 
-<div class="audio-container">
-    <span class="audio-name">Audio 2:</span>
-    <input type="file" id="audio2" accept="audio/*">
-    <button id="play2">Play</button>
-    <button id="pause2">Pause</button>
-    <input type="range" min="0" max="1" step="0.01" class="volume-slider" id="volume2">
+    <audio id="myAudio" controls></audio> 
+
+    <button id="play">Play</button>
+    <button id="pause">Pause</button>
+    <input type="range" min="0" max="1" step="0.01" class="volume-slider" id="volume">
 </div>
 
 <script>
-const audio1 = new Audio();
-const audio2 = new Audio();
+const audioUrlInput = document.getElementById('audioUrl');
+const audioElement = document.getElementById('myAudio');
 
-document.getElementById('play1').addEventListener('click', () => {
-    audio1.play();
+document.getElementById('play').addEventListener('click', () => {
+    audioElement.play();
 });
 
-document.getElementById('pause1').addEventListener('click', () => {
-    audio1.pause();
+document.getElementById('pause').addEventListener('click', () => {
+    audioElement.pause();
 });
 
-document.getElementById('play2').addEventListener('click', () => {
-    audio2.play();
+document.getElementById('volume').addEventListener('input', () => {
+    audioElement.volume = document.getElementById('volume').value;
 });
 
-document.getElementById('pause2').addEventListener('click', () => {
-    audio2.pause();
-});
-
-document.getElementById('audio1').addEventListener('change', (event) => {
-    const file = event.target.files[0];
-    const reader = new FileReader();
-
-    reader.onload = (e) => {
-        audio1.src = e.target.result;
-    };
-
-    reader.readAsDataURL(file);
-});
-
-document.getElementById('audio2').addEventListener('change', (event) => {
-    const file = event.target.files[0];
-    const reader = new FileReader();
-
-    reader.onload = (e) => {
-        audio2.src = e.target.result;
-    };
-
-    reader.readAsDataURL(file);
-});
-
-document.getElementById('volume1').addEventListener('input', () => {
-    audio1.volume = document.getElementById('volume1').value;
-});
-
-document.getElementById('volume2').addEventListener('input', () => {
-    audio2.volume = document.getElementById('volume2').value;
+audioUrlInput.addEventListener('input', () => {
+    audioElement.src = audioUrlInput.value; 
 });
 </script>
 </body>
